--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,345 +12,125 @@ jobs:
       - name: Install RustDesk via Homebrew
         run: |
           echo "=== Installing RustDesk via Homebrew ==="
-          
           if ! command -v brew &> /dev/null; then
-            echo "Installing Homebrew..."
             /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
             echo 'eval "$(/opt/homebrew/bin/brew shellenv)"' >> ~/.zshrc
             eval "$(/opt/homebrew/bin/brew shellenv)"
           fi
-          
           brew install --cask rustdesk
-          echo "✅ RustDesk installed via Homebrew"
+          echo "RustDesk installed"
 
-      - name: Get Exact Display Resolution
+      - name: Resolution Detect
         run: |
-          echo "=== Getting Exact Display Resolution ==="
-          
-          # Clean method to get resolution
-          RESOLUTION=$(osascript -e 'tell application "Finder" to get bounds of window of desktop' 2>/dev/null | awk -F', ' '{print $3 "x" $4}')
-          
-          if [ -z "$RESOLUTION" ] || [ "$RESOLUTION" = "0x0" ] || [ "$RESOLUTION" = "x" ]; then
-            # Try system_profiler with better parsing
-            RESOLUTION=$(system_profiler SPDisplaysDataType 2>/dev/null | grep -A1 "Resolution:" | tail -1 | tr -d ' ' | sed 's/[^0-9x]//g')
-          fi
-          
-          if [ -z "$RESOLUTION" ] || [ "$RESOLUTION" = "0x0" ] || [ "$RESOLUTION" = "x" ]; then
-            # Fallback to known GitHub Actions runner resolution
+          echo "=== Getting display resolution ==="
+          RESOLUTION=$(system_profiler SPDisplaysDataType | grep Resolution | head -1 | sed 's/[^0-9x]//g')
+
+          if [ -z "$RESOLUTION" ]; then
             RESOLUTION="1024x768"
-            echo "⚠️ Using default GitHub Actions resolution: $RESOLUTION"
-          else
-            echo "Detected resolution: $RESOLUTION"
           fi
-          
-          # Clean up the resolution string (remove commas, spaces, etc.)
-          RESOLUTION=$(echo "$RESOLUTION" | tr -d ',' | tr -d ' ')
-          
-          # Parse width and height safely
-          WIDTH=$(echo "$RESOLUTION" | cut -d'x' -f1)
-          HEIGHT=$(echo "$RESOLUTION" | cut -d'x' -f2)
-          
-          # Verify we got valid numbers
-          if ! [[ "$WIDTH" =~ ^[0-9]+$ ]] || ! [[ "$HEIGHT" =~ ^[0-9]+$ ]]; then
-            echo "⚠️ Invalid resolution detected, using defaults"
-            WIDTH="1024"
-            HEIGHT="768"
-            RESOLUTION="${WIDTH}x${HEIGHT}"
-          fi
-          
-          echo "Width: $WIDTH px"
-          echo "Height: $HEIGHT px"
-          
+
+          WIDTH=$(echo $RESOLUTION | cut -d'x' -f1)
+          HEIGHT=$(echo $RESOLUTION | cut -d'x' -f2)
+
           echo "RESOLUTION=$RESOLUTION" >> $GITHUB_ENV
           echo "SCREEN_WIDTH=$WIDTH" >> $GITHUB_ENV
           echo "SCREEN_HEIGHT=$HEIGHT" >> $GITHUB_ENV
-          
+
           mkdir -p screenshots
           echo "SCREENSHOT_DIR=$(pwd)/screenshots" >> $GITHUB_ENV
 
-      - name: Start RustDesk and Wait for Permission Prompt
+      - name: Start RustDesk
         run: |
-          echo "=== Starting RustDesk ==="
-          
-          # Launch RustDesk
+          echo "Starting RustDesk"
           open -a /Applications/RustDesk.app
-          
-          echo "Waiting for RustDesk to start and permission prompt to appear..."
-          echo "This may take 10-15 seconds..."
-          
-          # Wait for RustDesk process
-          for i in {1..30}; do
-            if pgrep -f "RustDesk" > /dev/null; then
-              echo "✅ RustDesk process found (attempt $i)"
-              break
-            fi
-            sleep 1
-          done
-          
-          # Additional wait for permission dialog
           sleep 15
-          
-          echo "RustDesk should be running now"
-          echo "Permission prompt should appear..."
 
-      - name: Take Initial Screenshot (Before Click)
+      - name: Initial Screenshot
         run: |
-          echo "=== Taking Initial Screenshot (Before Permission Grant) ==="
-          
-          timestamp=$(date +%Y%m%d_%H%M%S)
-          before_file="$SCREENSHOT_DIR/before_permission_$timestamp.png"
-          
-          screencapture -x "$before_file"
-          
-          if [ -f "$before_file" ]; then
-            filesize=$(ls -lh "$before_file" | awk '{print $5}')
-            echo "✅ Initial screenshot saved: $before_file ($filesize)"
-          else
-            echo "⚠️ Failed to take initial screenshot"
-          fi
+          file="$SCREENSHOT_DIR/before_permission.png"
+          screencapture -x "$file"
+          echo "Saved: $file"
 
       - name: Calculate Button Position
         run: |
-          echo "=== Calculating Button Position ==="
-          
-          # GitHub Actions runner resolution (from your screenshots)
           ORIGINAL_WIDTH=1024
           ORIGINAL_HEIGHT=768
           ORIGINAL_X=462
           ORIGINAL_Y=374
-          
-          echo "Original resolution: ${ORIGINAL_WIDTH}x${ORIGINAL_HEIGHT}"
-          echo "Current resolution: ${SCREEN_WIDTH}x${SCREEN_HEIGHT}"
-          echo "Original button position: (${ORIGINAL_X}, ${ORIGINAL_Y})"
-          
-          # Calculate scaling factors using bc for precision
-          X_SCALE=$(echo "scale=2; $SCREEN_WIDTH / $ORIGINAL_WIDTH" | bc)
-          Y_SCALE=$(echo "scale=2; $SCREEN_HEIGHT / $ORIGINAL_HEIGHT" | bc)
-          
-          echo "Scaling factors: X=${X_SCALE}, Y=${Y_SCALE}"
-          
-          # Calculate new coordinates (round to nearest integer)
-          NEW_X=$(echo "$ORIGINAL_X * $X_SCALE" | bc | awk '{printf "%.0f", $1}')
-          NEW_Y=$(echo "$ORIGINAL_Y * $Y_SCALE" | bc | awk '{printf "%.0f", $1}')
-          
-          # Ensure coordinates are within screen bounds
-          if [ $NEW_X -lt 0 ]; then NEW_X=0; fi
-          if [ $NEW_X -gt $SCREEN_WIDTH ]; then NEW_X=$((SCREEN_WIDTH - 10)); fi
-          if [ $NEW_Y -lt 0 ]; then NEW_Y=0; fi
-          if [ $NEW_Y -gt $SCREEN_HEIGHT ]; then NEW_Y=$((SCREEN_HEIGHT - 10)); fi
-          
-          echo "Calculated button position: (${NEW_X}, ${NEW_Y})"
-          
+
+          X_SCALE=$(echo "$SCREEN_WIDTH / $ORIGINAL_WIDTH" | bc -l)
+          Y_SCALE=$(echo "$SCREEN_HEIGHT / $ORIGINAL_HEIGHT" | bc -l)
+
+          NEW_X=$(printf "%.0f" $(echo "$ORIGINAL_X * $X_SCALE" | bc -l))
+          NEW_Y=$(printf "%.0f" $(echo "$ORIGINAL_Y * $Y_SCALE" | bc -l))
+
           echo "BUTTON_X=$NEW_X" >> $GITHUB_ENV
           echo "BUTTON_Y=$NEW_Y" >> $GITHUB_ENV
+          echo "Scaled click position: $NEW_X,$NEW_Y"
 
       - name: Click Allow Button
         run: |
-          echo "=== Clicking Allow Button ==="
-          echo "Clicking at coordinates: ($BUTTON_X, $BUTTON_Y)"
-          
-          # Install cliclick for precise clicking
-          if ! command -v cliclick &> /dev/null; then
-            echo "Installing cliclick..."
-            brew install cliclick
-          fi
-          
-          # First, let's see what's on screen
-          echo "Taking screenshot before click..."
-          debug_before="$SCREENSHOT_DIR/debug_before_click_$(date +%H%M%S).png"
-          screencapture -x "$debug_before"
-          
-          # Click the Allow button
-          echo "Clicking the button..."
+          brew install cliclick
+          screencapture -x "$SCREENSHOT_DIR/debug_before_click.png"
           cliclick c:$BUTTON_X,$BUTTON_Y
-          
-          echo "✅ Click performed"
-          
-          # Wait for dialog to close
-          sleep 3
-          
-          # Take screenshot after click
-          echo "Taking screenshot after click..."
-          debug_after="$SCREENSHOT_DIR/debug_after_click_$(date +%H%M%S).png"
-          screencapture -x "$debug_after"
-          
-          # Try alternative clicking methods if needed
-          echo "Trying alternative click methods..."
-          
-          # Method 2: AppleScript
-          osascript <<EOF
-          tell application "System Events"
-            delay 1
-            click at {$BUTTON_X, $BUTTON_Y}
-          end tell
-          EOF
-          
-          # Method 3: Python script as backup
-          python3 <<EOF
-          import subprocess
-          import time
-          
-          # Click using AppleScript
-          script = f'''
-          tell application "System Events"
-            click at {{$BUTTON_X, $BUTTON_Y}}
-          end tell
-          '''
-          
-          subprocess.run(['osascript', '-e', script])
-          EOF
-          
-          # Grant permissions via tccutil if possible
-          echo "Attempting to grant screen recording permission..."
-          sudo sqlite3 "/Library/Application Support/com.apple.TCC/TCC.db" "INSERT OR REPLACE INTO access VALUES('kTCCServiceScreenRecording','com.carriez.rustdesk',0,1,1,NULL,NULL,NULL,'UNUSED',NULL,0,UNIXEPOCH());" 2>/dev/null || echo "Note: May not have permission to modify TCC database"
+          sleep 2
+          screencapture -x "$SCREENSHOT_DIR/debug_after_click.png"
 
-      - name: Take Verification Screenshots
+      - name: Verification Screenshots (5)
         run: |
-          echo "=== Taking Verification Screenshots ==="
-          
-          # Wait a bit for RustDesk to initialize
-          sleep 5
-          
-          # Take 5 verification screenshots
           for i in {1..5}; do
-            echo ""
-            echo "📸 Taking verification screenshot $i/5..."
-            
-            timestamp=$(date +%Y%m%d_%H%M%S)
-            filepath="$SCREENSHOT_DIR/verification_${i}_${timestamp}.png"
-            
-            screencapture -x "$filepath"
-            
-            if [ -f "$filepath" ]; then
-              filesize=$(ls -lh "$filepath" | awk '{print $5}')
-              echo "✅ Saved: $(basename $filepath) ($filesize)"
-            else
-              echo "⚠️ Failed to take screenshot $i"
-            fi
-            
-            if [ $i -lt 5 ]; then
-              echo "   Waiting 2 seconds..."
-              sleep 2
-            fi
+            file="$SCREENSHOT_DIR/verification_$i.png"
+            screencapture -x "$file"
+            echo "Saved: $file"
+            sleep 2
           done
-          
-          # List all screenshots
-          echo ""
-          echo "=== All Screenshots ==="
-          ls -la "$SCREENSHOT_DIR/" 2>/dev/null | head -15
 
-      - name: Upload All Screenshots
+      - name: 🔥 NEW: Click 210,563 After Verification
+        run: |
+          echo "Click at fixed coordinates 210,563"
+          brew install cliclick
+          cliclick c:210,563
+          sleep 2
+          file="$SCREENSHOT_DIR/click_fixed_after.png"
+          screencapture -x "$file"
+          echo "Saved: $file"
+
+      - name: Upload Screenshots Now
         uses: actions/upload-artifact@v4
         with:
-          name: rustdesk-permission-screenshots
+          name: rustdesk-screenshots
           path: ${{ env.SCREENSHOT_DIR }}
           retention-days: 1
 
-      - name: Keep System Running for 20 Minutes
+      - name: Keep System Running 20 Minutes (No EOF Bugs)
         run: |
-          echo "=== Keeping System Running for 20 Minutes ==="
-          echo "Start time: $(date)"
-          echo "End time: $(date -v+20M)"
-          echo ""
-          echo "RustDesk should be working with screen recording permission"
-          echo "If the Allow button was clicked successfully, RustDesk should be functional"
-          echo ""
-          
-          # Create status file
-          STATUS_FILE="$SCREENSHOT_DIR/rustdesk_status.txt"
-          echo "RustDesk 20-Minute Monitoring Log" > "$STATUS_FILE"
-          echo "=================================" >> "$STATUS_FILE"
-          echo "Resolution: $RESOLUTION" >> "$STATUS_FILE"
-          echo "Button clicked at: ($BUTTON_X, $BUTTON_Y)" >> "$STATUS_FILE"
-          echo "Start time: $(date)" >> "$STATUS_FILE"
-          echo "" >> "$STATUS_FILE"
-          
-          # Run for 20 minutes
-          for minute in {1..20}; do
-            current_time=$(date '+%H:%M:%S')
-            echo "[$current_time] Minute $minute/20"
-            echo "[$current_time] Minute $minute/20" >> "$STATUS_FILE"
-            
-            # Check RustDesk status
-            if pgrep -f "RustDesk" > /dev/null; then
-              echo "  ✅ RustDesk: Running"
-              echo "  RustDesk: Running" >> "$STATUS_FILE"
-              
-              # Take screenshot every 4 minutes
-              if [ $((minute % 4)) -eq 0 ]; then
-                runtime_file="$SCREENSHOT_DIR/runtime_${minute}min_$(date +%H%M%S).png"
-                if screencapture -x "$runtime_file" 2>/dev/null; then
-                  echo "  📸 Runtime screenshot taken"
-                  echo "  Screenshot at minute $minute" >> "$STATUS_FILE"
-                fi
-              fi
+          STATUS="$SCREENSHOT_DIR/rustdesk_status.txt"
+          echo "RustDesk 20-Minute Monitor Log" > "$STATUS"
+
+          for i in {1..20}; do
+            echo "Minute $i" >> "$STATUS"
+
+            if pgrep -f RustDesk >/dev/null; then
+              echo "Running" >> "$STATUS"
             else
-              echo "  ⚠️ RustDesk: Not running"
-              echo "  RustDesk: Not running at minute $minute" >> "$STATUS_FILE"
-              
-              # Try to restart every 5 minutes if not running
-              if [ $((minute % 5)) -eq 0 ]; then
-                echo "  Attempting to restart RustDesk..."
-                open -a /Applications/RustDesk.app 2>/dev/null || true
-                echo "  RustDesk restart attempted" >> "$STATUS_FILE"
+              echo "Not running" >> "$STATUS"
+              if [ $((i % 5)) -eq 0 ]; then
+                open -a /Applications/RustDesk.app || true
               fi
             fi
-            
-            # Display RustDesk window info occasionally
-            if [ $((minute % 3)) -eq 0 ]; then
-              echo "  Checking window state..."
-              osascript <<'EOF' 2>/dev/null | grep -v "^$" || true
-              tell application "System Events"
-                try
-                  tell process "RustDesk"
-                    set windowCount to count of windows
-                    return "  Windows: " & windowCount
-                  end tell
-                on error
-                  return "  RustDesk window check failed"
-                end try
-              end tell
-              EOF
+
+            if [ $((i % 4)) -eq 0 ]; then
+              screencapture -x "$SCREENSHOT_DIR/runtime_$i.png"
             fi
-            
-            echo "  Waiting 1 minute..."
-            echo "" >> "$STATUS_FILE"
+
             sleep 60
           done
-          
-          echo ""
-          echo "✅ 20-minute runtime completed at $(date)"
-          echo "End time: $(date)" >> "$STATUS_FILE"
-          
-          # Final status
-          echo ""
-          echo "=== Final Status ==="
-          echo "Total screenshots: $(find "$SCREENSHOT_DIR" -name "*.png" 2>/dev/null | wc -l)"
-          echo "RustDesk running: $(pgrep -f "RustDesk" > /dev/null && echo "Yes" || echo "No")"
 
       - name: Upload Final Status
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: rustdesk-final-status
-          path: |
-            ${{ env.SCREENSHOT_DIR }}/rustdesk_status.txt
-            ${{ env.SCREENSHOT_DIR }}
+          path: ${{ env.SCREENSHOT_DIR }}
           retention-days: 1
 
-      - name: Final Cleanup
-        if: always()
-        run: |
-          echo "=== Final Cleanup ==="
-          
-          # Final screenshot
-          final_file="$SCREENSHOT_DIR/final_complete_$(date +%H%M%S).png"
-          screencapture -x "$final_file" 2>/dev/null && echo "✅ Final screenshot taken" || echo "⚠️ Could not take final screenshot"
-          
-          # Stop RustDesk
-          pkill -f "RustDesk" 2>/dev/null || true
-          sleep 2
-          
-          echo "✅ Cleanup complete"
-          echo "Total workflow time: ~25 minutes"
-          echo "Total screenshots captured: $(find "$SCREENSHOT_DIR" -name "*.png" 2>/dev/null | wc -l)"
